--- a/sass/pages/projects/_project.scss
+++ b/sass/pages/projects/_project.scss
@@ -19,7 +19,7 @@
       flex: 1;
       height: 60rem;
       @media screen and (max-width: $bp-large) {
-        margin-bottom: 10rem;
+        margin-bottom: 15rem;
       }
     }
     &-right {
@@ -83,6 +83,9 @@
   &__img {
     width: 90%;
     border-radius: 10px;
+    @media screen and (max-width: $bp-small) {
+      //width: 70%;
+    }
   }
   img {
     box-shadow: $shadow-small;
@@ -111,8 +114,12 @@
     width: 40%;
     margin-top: 3rem;
     border-radius: 40px;
-    @media screen and (max-width: $bp-large) {
-      width: 40%;
-    }
+  }
+}
+
+#e-portfolio .project__container-right,
+#learning-package .project__container-right {
+  @media screen and (max-width: $bp-small) {
+    margin-top: -15rem;
   }
 }
